--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,11 +1,10 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
-
-    encoders:
+    password_hashers:
         App\Entity\User:
-            algorithm: bcrypt
+            algorithm: auto
+
     providers:
-        my_provider:
+        app_user_provider:
             entity:
                 class: App\Entity\User
                 property: username
@@ -14,28 +13,19 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+
         main:
-            anonymous: true
+            lazy: true
+            provider: app_user_provider
 
             form_login:
                 login_path: app_login
                 check_path: app_login
-                provider: my_provider
 
             logout:
-                path: /logout
+                path: app_logout
                 target: /
 
-            # activate different ways to authenticate
-
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-         - { path: ^/, roles: ROLE_USER }
+        - { path: ^/login, roles: PUBLIC_ACCESS }
+        - { path: ^/, roles: ROLE_USER }
