chore: update mailer configuration from Swiftmailer to Symfony Mailer
Co-authored-by: Genie <genie@cosine.sh>

--- a/.env
+++ b/.env
@@ -27,9 +27,8 @@ APP_SECRET=eaaa92a5cce28f8af875a1cc30612aa7
 DATABASE_URL=mysql://u819198500_manage:mhHZzqYA4XtY@127.0.0.1:3306/u819198500_manage
 ###< doctrine/doctrine-bundle ###
 
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
-###< symfony/swiftmailer-bundle ###
+###> symfony/mailer ###
+# For a generic SMTP server, typical DSN: "smtp://localhost"
+# See https://symfony.com/doc/current/mailer.html#using-built-in-transports
+MAILER_DSN=smtp://localhost
+###< symfony/mailer ###
