--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "symfony/validator": "^6.4",
         "symfony/web-link": "^6.4",
         "symfony/yaml": "^6.4",
-        "symfony/runtime": "^6.4"
+        "symfony/runtime": "^6.4",
+        "dompdf/dompdf": "^2.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.5",
