--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/form": "^6.4",
         "symfony/framework-bundle": "^6.4",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/orm-pack": "*",
+        "symfony/orm-pack": "^2.6",
         "symfony/process": "^6.4",
         "symfony/security-bundle": "^6.4",
         "symfony/serializer-pack": "*",
