--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,10 @@ security:
         App\Entity\User:
             algorithm: auto
 
+    role_hierarchy:
+        ROLE_ADMIN: ['ROLE_ANALYST', 'ROLE_USER']
+        ROLE_ANALYST: ['ROLE_USER']
+
     providers:
         app_user_provider:
             entity:
@@ -17,15 +21,13 @@ security:
         main:
             lazy: true
             provider: app_user_provider
-
-            form_login:
-                login_path: app_login
-                check_path: app_login
-
+            custom_authenticator:
+                - App\Security\LoginFormAuthenticator
             logout:
                 path: app_logout
                 target: /
 
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
-        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/, roles: ROLE_ANALYST }
