--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -30,4 +30,5 @@ security:
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/client, roles: ROLE_CLIENT }
         - { path: ^/, roles: ROLE_ANALYST }
