Add audit logging, monitoring health checks, and audit trail storage

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -28,6 +28,7 @@ security:
                 target: /
 
     access_control:
+        - { path: ^/healthz, roles: PUBLIC_ACCESS }
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/client, roles: ROLE_CLIENT }
